<resources>
    <string name="app_name">Post Notif</string>
    <string name="emails_icon">Emails Icon</string>
    <string name="emails">Emails</string>
    <string name="telephones_icon">Telephones Icon</string>
    <string name="telephones">Telephones</string>
    <string name="scans_icon">Scans Icon</string>
    <string name="scans">Scans</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="settings">Settings</string>
    <string name="app_title">Post Notif</string>
    <string name="unit">Unit</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="back">Back</string>
</resources>